# starmerge

./: LICENSE  README.md  porting-analysis.md  pyproject.toml
.github/workflows/: create-release.yml  quality.yml  release.yml
benchmarks/: bench_core.py  bench_hot_path.py  run_benchmarks.py
examples/: class_group_utils_example.py  create_tailwind_merge_example.py  default_config_example.py  merge_classlist_example.py  validators_example.py
scripts/: generate_type_literals.py  remove_comments.py  test_analyzer.py  update_types.py
starmerge/: __init__.py
starmerge/lib/: __init__.py  class_group_utils.py  config_utils.py  create_tailwind_merge.py  default_config.py  extend_tailwind_merge.py  from_theme.py  lru_cache.py  merge_classlist.py  merge_configs.py  parse_class_name.py  sort_modifiers.py  tw_join.py  tw_merge.py  types.py  validators.py
tests/: test_arbitrary_properties.py  test_arbitrary_values.py  test_arbitrary_variants.py  test_class_group_conflicts.py  test_class_map.py  test_colors.py  test_conflicts_across_class_groups.py  test_content_utilities.py  test_create_tailwind_merge.py  test_default_config.py  test_docs_examples.py  test_experimental_parse_class_name.py  test_extend_tailwind_merge.py  test_important_modifier.py  test_lazy_initialization.py  test_merge_configs.py  test_modifiers.py  test_negative_values.py  test_non_conflicting_classes.py  test_non_tailwind_classes.py  test_per_side_border_colors.py  test_prefixes.py  test_pseudo_variants.py  test_public_api.py  test_standalone_classes.py  test_tailwind_css_versions.py  test_theme.py  test_tw_join.py  test_tw_merge.py  test_type_generics.py  test_validators.py
tw_merge/: __init__.py
tw_merge/lib/: __init__.py  class_group_utils.py  config_utils.py  create_tailwind_merge.py  default_config.py  extend_tailwind_merge.py  from_theme.py  lru_cache.py  merge_classlist.py  merge_configs.py  parse_class_name.py  sort_modifiers.py  tw_join.py  tw_merge.py  types.py  validators.py
