[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tw_merge"
version = "0.1.1"
description = "A Python port of tailwind-merge v3.0.2"
readme = "README.md"
authors = [
    {name = "promptsiren", email = "promptsiren@gmail.com"},
]
keywords = ["tailwind", "css", "merge", "tailwindcss", "classes"]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
"Homepage" = "https://github.com/promptsiren/tw-merge"
"Bug Tracker" = "https://github.com/promptsiren/tw-merge/issues"
"Original Project" = "https://github.com/dcastil/tailwind-merge/tree/v2.5.4"

[tool.hatch.build.targets.wheel]
packages = ["tw_merge"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
