[project]
name = "starmerge"
version = "0.2.0"
description = "A comprehensive Python port of tailwind-merge - intelligently merge Tailwind CSS classes"
readme = "README.md"
authors = [
    {name = "promptsiren", email = "promptsiren@gmail.com"},
]
keywords = ["tailwind", "css", "merge", "tailwindcss", "classes", "utility"]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/banditburai/starmerge"
Documentation = "https://github.com/banditburai/starmerge#readme"
Repository = "https://github.com/banditburai/starmerge"
"Bug Tracker" = "https://github.com/banditburai/starmerge/issues"
"Original Project" = "https://github.com/dcastil/tailwind-merge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["starmerge"]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.0",
]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["benchmarks", "scripts", "examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ── Pyright ───────────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["starmerge", "tests"]
reportArgumentType = false
reportOptionalCall = false
reportAssignmentType = false
reportInconsistentOverload = false
reportTypedDictNotRequiredAccess = false
reportIndexIssue = false
reportUnnecessaryIsInstance = false

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["starmerge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
